# DeluxeMod

./: .gitignore  MANIFEST.in  README.rst  crowdin.yml  pyproject.toml  requirements.txt
src/DeluxeMod/: __init__.py  content.py
src/DeluxeMod/Entities/: Android.py  Beast.py  Cow.py  Elemental.py  Guardian.py  MegaMonster.py  MegaRhino.py  NeuroRat.py  Rat.py  Skeleton.py  Slime.py  TelegramEntity.py
src/DeluxeMod/Items/: CaffeineCandy.py  CryoGrenade.py  DeathGrenade.py  EnergyGrenade.py  MucusInTheBottle.py  SourCandy.py  SweetCandy.py
src/DeluxeMod/Matches/: AndroidMatch.py  BasicMatch.py  BeastDungeon.py  BotDungeon.py  ElementalDungeon.py  ElementalMatch.py  GuardianDungeon.py  MegaDungeon.py  Room57.py  SlimeDungeon.py  SlimeMatch.py  TestGameMatch.py  TournierMatch.py
src/DeluxeMod/Skills/: Dash.py  ExplosionMagic.py  FinalBlow.py  Heroism.py  Invulnerable.py  SweetTooth.py  Tactician.py
src/DeluxeMod/States/: Blindness.py  CryoFreeze.py  Dehydration.py  Hunger.py  Weakness.py
src/DeluxeMod/Weapons/: AbyssalBlade.py  Boomerang.py  ButterflyKnife.py  Chainsaw.py  CursedSword.py  Dagger.py  Emitter.py  GrenadeLauncher.py  Gunbai.py  MagicMirror.py  NeedleFan.py  Shurikens.py  StarBow.py  Sword.py  ThrowingSickles.py  VampiricWhip.py
src/DeluxeMod/localizations/: locale_en.properties  locale_fr.properties  locale_ru.properties  locale_uk.properties  locale_uz.properties
